stDemoOne/force-app/main/default/objects/Dynamic_Content__c/Dynamic_Content__c.object-meta.xml
<CustomObject>
    <description>Different kinds of content used in the Dynamic Banner component.</description>
    <label>Dynamic Content</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Dynamic Content</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>