stDemoOne/force-app/main/default/objects/Dynamic_Content__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>Unique reference used to decide where this record&apos;s content should be used</description>
    <inlineHelpText>Unique reference used to decide where this record&apos;s content should be used</inlineHelpText>
    <label>Tag</label>
    <length>155</length>
    <type>Text</type>
</CustomField>