stDemoOne/force-app/main/default/objects/Dynamic_Content__c/fields/Title_Label__c.field-meta.xml
<CustomField>
    <fullName>Title_Label__c</fullName>
    <description>Title/headline/label</description>
    <inlineHelpText>Title/headline/label</inlineHelpText>
    <label>Title/Label</label>
    <type>TextArea</type>
</CustomField>