stDemoOne/force-app/main/default/objects/Dynamic_Content__c/fields/URL_Behavior__c.field-meta.xml
<CustomField>
    <fullName>URL_Behavior__c</fullName>
    <description>When clicked, should the URL be visited in the same window/tab (_self) or a new one (_new)?</description>
    <inlineHelpText>When clicked, should the URL be visited in the same window/tab (_self) or a new one (_new)?</inlineHelpText>
    <label>URL Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>_self</fullName>
            </value>
            <value>
                <fullName>_new</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>