stDemoOne/force-app/main/default/objects/Dynamic_Content__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tag__c</columns>
    <columns>Content_Type__c</columns>
    <columns>Title_Label__c</columns>
    <columns>Icon__c</columns>
    <columns>Flow_URL__c</columns>
    <columns>URL_Behavior__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>